# deep-learning-from-scratch

./: README.md  pyproject.toml
deeep-learning-3/dezero/: core.py
deeep-learning-3/steps/: step7.1.py  step7.2.py  step9.2.py
deep-learning-2/ch01/: forward_net.py
deep-learning-2/common/: layers.py  optimizer.py  trainer.py
