[tool.poetry]
name = "deep-learning-from-scratch"
version = "0.1.0"
description = ""
authors = ["kazuki <kaz.tokyo.tech20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
numpy = "^1.24.2"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
